force-app/main/default/objects/Invoice__c/fields/Maximum_Sell_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Sell_Item_Price__c</fullName>
    <label>Maximum Sell Item Price</label>
    <summarizedField>Sell_Item__c.Price__c</summarizedField>
    <summaryForeignKey>Sell_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>