force-app/main/default/objects/Invoice__c/fields/Minimum_Sell_Item_Price__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Sell_Item_Price__c</fullName>
    <label>Minimum Sell Item Price</label>
    <summarizedField>Sell_Item__c.Price__c</summarizedField>
    <summaryForeignKey>Sell_Item__c.Invoice__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>