force-app/main/default/objects/Invoice__c/validationRules/Closed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL( Status__c , &apos;CLOSED&apos;)   &amp;&amp;   ISNULL( Closed_Date__c )</errorConditionFormula>
    <errorDisplayField>Closed_Date__c</errorDisplayField>
    <errorMessage>Please enter your closed date</errorMessage>
</ValidationRule>